# ME336-2021Spring

./: .gitignore  README.md  RL-CartPole_DQN.ipynb  RL-TaxiV3_Tabular_Q_learning.ipynb  RL-cartpole_a2c_online.ipynb  requirements.txt
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
MadMario/: README.md  environment.yml  replay.py  requirements.txt  tutorial_v2.ipynb
MadMario/checkpoints/2021-01-29T09-13-21/: log
configs/basic_config/: cali2D.yaml  cali3D.yaml  camera_rs_d435.yaml  franka.yaml  robot_auboi5.yaml  robot_ur5.yaml  yolov5_cfg.yaml
deepclaw/: __init__.py
deepclaw/driver/: ReadMe.MD  __init__.py
deepclaw/driver/arms/: ArmController.py  Auboi5Controller.py  URController_rtde.py  __init__.py
deepclaw/driver/arms/franka/RobotDirver/: CMakeLists.txt  Readme.md
deepclaw/driver/arms/franka/RobotDirver/Bionic/: FrankaDriver.cpp  FrankaDriver.h  JointPosTraj.cpp  JointPosTraj.h  VelTraj.cpp  VelTraj.h  Wrapper.cpp
deepclaw/driver/grippers/: CH340.py  GripperController.py  RG6.py  gripper_2f85.py
deepclaw/driver/sensors/: __init__.py
deepclaw/modules/calibration/: Calibration2D.py  EyeOnBase.py  ReadMe.md  __init__.py
deepclaw/modules/end2end/: ReadMe.md
deepclaw/modules/grasp_planning/GeoGrasp/: CMakeLists.txt  GeoGrasp.cpp  GeoGrasp_test.py  README.md  cloud_processor.cpp
deepclaw/utils/: 2007_003876.json  Add_New_Module_in_Server.md  BackgroundSubtraction.py  CheckImageGui.py  Client.py  CollectImage.py  Create_A_New_Client_Module.md  ForegroundDetector.py  Grasping_Distribution.py  IO.py  ImageDataCollection.py  Math.py  OfflineBackgroundDetector.py  ReadMe.md  RecoderRobotData.py  RecordImage.py  SelfSuperviseImageCollection.py  SelfSuperviseImageCollectionGUI.py  Server.py  __init__.py  lable_format.py  polygons2mask.py  polygons2pick.py  robot_grasp_collection.py  xx.json
muzero-general/: README.md  requirements.txt
projects/2d_picking/: main.py
projects/6d_picking/: __init__.py  main.py
(+26 files in other folders)
